--- a/.github/ISSUE_TEMPLATE/event.yml
+++ b/.github/ISSUE_TEMPLATE/event.yml
@@ -1,8 +1,8 @@
 name: Submit an event
 description: Submit a local event to be listed on the Todmorden Events website
 title: "[Event] "
-labels: ["event-submission"]
-assignees: []
+labels:
+  - event-submission
 
 body:
   - type: markdown
@@ -14,11 +14,11 @@ body:
         Submissions are reviewed before being published.
 
   - type: input
-    id: title
+    id: event_title
     attributes:
       label: Event title
       description: The name of the event
-      placeholder: Repair Café
+      placeholder: "Repair Café"
     validations:
       required: true
 
@@ -27,7 +27,7 @@ body:
     attributes:
       label: Event date
       description: Date of the event (YYYY-MM-DD)
-      placeholder: 2026-02-10
+      placeholder: "2026-02-10"
     validations:
       required: true
 
@@ -36,7 +36,7 @@ body:
     attributes:
       label: Start time
       description: Optional (24-hour format, e.g. 10:00)
-      placeholder: 10:00
+      placeholder: "10:00"
     validations:
       required: false
 
@@ -45,7 +45,7 @@ body:
     attributes:
       label: End time
       description: Optional (24-hour format, e.g. 13:00)
-      placeholder: 13:00
+      placeholder: "13:00"
     validations:
       required: false
 
@@ -54,7 +54,7 @@ body:
     attributes:
       label: Location
       description: Where the event takes place
-      placeholder: Todmorden Town Hall
+      placeholder: "Todmorden Town Hall"
     validations:
       required: true
 
